# bin

./: .gitignore  README.md  bgh.bat  dirs.bat  ecm.bat  ecmc.bat  emfish.bat  emingw.bat  ems.bat  esh.bat  ext-vim.bat  fif.bat  find-git.bat  off.bat  powershell.bat  print-date-time.bat  rst.bat  treefa.bat  vars-ecm-p.bat  vars-ems-p.bat  vars-scoop.bat
cmd/: README.md  print-substring-match.bat  strlen.bat  vars-bin.bat  vars-path-append.bat  vars-path-prepend-recursive.bat  vars-path-prepend.bat  vars-wnotes.bat
cmd/.obsolete/: ext-vim.bat  lastparent.bat  strindexof.bat  strtrimfrom.bat  win-path-default.txt
cmd/.obsolete/ruby/: gem.bat  ruby.bat
cmd/clb/: antc-cmn.bat  antc.bat  antc7.bat  antc8.bat  antcq.bat  cd-cmp.bat  clb-arc-cmn.bat  clb-arc.bat  clb-b-cmn.bat  clb-b-cmp.bat  clb-b-fx.bat  clb-b-git-fx.bat  clb-b-git-fxba.bat  clb-b-git-fxcore.bat  clb-b-git-modules.bat  clb-b-svn-fx.bat  clb-b.bat  clb-c-fx.bat  clb-conf-pg.bat  clb-i-ora.bat  clb-i-pg.bat  clb-i-pg703.bat  clb-startup.bat  clb-un-ora.bat  clb-un-pg.bat  clb-un-pg703.bat  clb-un-svc.bat  clb-up-ora.bat  clb-up-pg.bat  git-curb.bat  grac.bat  newclb-b.bat  on-sl.bat  psql-cmp.bat  vars-antc7.bat  vars-antc8.bat  vars-clb-62.bat  vars-clb-630.bat  vars-clb-631.bat  vars-clb-632.bat  (+7 more)
cmd/clb/.701/: clb-b-fx-701.bat  clb-b.bat  vars-clb-701.bat
cmd/pl/: cloc.bat  code.bat  vars-pl.bat  vars-rustup.bat
cmd/pl/go/: go.bat  vars-go.bat
cmd/pl/groovy/: gra.bat  gradle-du.bat  gradle.bat  granlp.bat  vars-gradle.bat
cmd/pl/haskell/: cab-dry.bat  cab-up.bat  cabal-dev.bat  cabal.bat  ghc-pkg.bat  ghc.bat  ghci.bat  haddock.bat  hlint.bat  hoogle.bat  hpc.bat  hscolour.bat  lhs2tex.bat  runghc.bat  vars-haskell-cabal-p.bat  vars-haskell-p.bat  vars-haskell-ver.bat  vars-haskell.bat
cmd/pl/jvm/: ant.bat  ant7.bat  clue.bat  elk-es.bat  grok-search.bat  grok.bat  jar.bat  jarscan.bat  javaw.bat  jconsole.bat  jd-cli.bat  jinfo.bat  jps.bat  jvisualvm.bat  lein.bat  logstash.bat  mvn.bat  sbt-du.bat  sbt-huge.bat  sbt-oj.bat  sbt.bat  sbt7.bat  sbt8.bat  unset-catalina.bat  vars-ant-old.bat  vars-ant-p.bat  vars-ant.bat  vars-clojure.bat  vars-clue.bat  vars-elk.bat  vars-grok.bat  vars-java-clb.bat  vars-java-p.bat  vars-java.bat  vars-java6-p.bat  vars-java6.bat  vars-java7-p.bat  vars-java7.bat  vars-java8-p.bat  vars-java8.bat  (+5 more)
cmd/util/: vars-utils.bat
dotfiles/: .gitconfig  _gvimrc  _pentadactylrc  _vimrc
dotfiles/.vimsauce/: clb.vimrc  fx.vimrc
manual-backup/pentadactyl/: _pentadactylrc
notes/: pages.txt
notes/agile/: agile.txt
notes/hw/: routers.txt
notes/rss/: feedly.opml
obsolete/Coq/: coq.txt
obsolete/pl/: bjs.bat  cmake.bat  mat_dump_analyze.bat  node.bat
obsolete/util/: emnw.bat  hg.bat
prj/cabal/mdm-nsis/: b.bat  mdm-nsis.cabal  readme.txt  t.bat
prj/cabal/mdm-nsis/src/: Main.hs
vagrant-boxes/centos-3/: Vagrantfile
vagrant-boxes/centos-64/: Vagrantfile  readme.txt
vagrant-boxes/ubuntu-raring/: Vagrantfile
(+558 files in other folders)
