name:                mdm-nsis
version:             0.1.0.0
synopsis:            mdm nsis 
description:         mdm nsis descr
license:             BSD3
-- license-file:        LICENSE
author:              Igor Goncharenko
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

build-depends:
  base ==4.6.*

executable mdm-nsis 
  hs-source-dirs:    src
  main-is:           Main.hs
  GHC-Options:       -O2 -Wall
  build-depends:
    base        ==4.6.*,
    nsis        ==0.2.*
  -- other-modules:       
