name:                mdm-nsis
version:             0.1.0.0
cabal-version:       >= 1.10
synopsis:            mdm nsis 
description:         mdm nsis descr
license:             BSD3
-- license-file:        LICENSE
author:              Igor Goncharenko
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
    default-language:    Haskell2010
    build-depends:
        base         == 4.6.*,
        transformers >= 0.2 && < 0.4,
        uniplate     >= 1.5 && < 1.7
    exposed-modules:
        Development.NSIS
        Development.NSIS.Plugins.Base64
        Development.NSIS.Plugins.Taskbar
    other-modules:
        Development.NSIS.Library
        Development.NSIS.Optimise
        Development.NSIS.Show
        Development.NSIS.Sugar
        Development.NSIS.Type

executable mdm-nsis 
    default-language:    Haskell2010
    ghc-options:         -O2 -Wall
    hs-source-dirs:      src
    main-is:             Main.hs
    build-depends:
        base        == 4.6.*,
        mdm-nsis
    -- nsis        ==0.2.*
